correctly align tutorial messages

--- a/assets/src/sass/_tutorial.scss
+++ b/assets/src/sass/_tutorial.scss
@@ -15,7 +15,6 @@
 
     .tutorial-message {
         @include span-columns(6);
-        @include shift(2);
         padding: 10px;
         margin-top: 20px;
         margin-bottom: 20px;
